Fix Social divs overflow
- max-width: 100% for widget container
- switch padding units

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ nav {
 
 .widget-container {
     display: grid;
+    width: 100%;
 } @media screen and (min-width: 768px) {
     .widget-container {
         grid-template-columns: 50%;
@@ -208,7 +209,7 @@ nav {
     display: flex;
     gap: 5px;
     flex-grow: 1;
-    padding: 20px 30px;
+    padding: 2% 3%;
     border: solid 1px #CCCCCC;
     background-color: #F5F5F5;
     border-radius: 6px;
